--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,14 @@ proguard/
 
 # Android Studio captures folder
 captures/
+*.iml
+.idea
+.gradle
+/local.properties
+.DS_Store
+build
+/captures
+.externalNativeBuild
 
 # Intellij
 *.iml
